--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -143,7 +143,7 @@
                                             {% elif log_date == current_date|date:"Y-m-d"|add:"-1 day" %}
                                                 Yesterday {{ log.timestamp|date:"g:i A" }}
                                             {% elif log_date > current_date|date:"Y-m-d"|add:"-7 day" %}
-                                                {{ current_date|date:"Y-m-d"|date:"-log_date"|timesince }} days ago {{ log.timestamp|date:"g:i A" }}
+                                                {{ current_date|timesince:log.timestamp|date:"Y-m-d" }} days ago {{ log.timestamp|date:"g:i A" }}
                                             {% elif log_weekday < current_weekday and log_date > current_date|date:"Y-m-d"|add:"-7 day" %}
                                                 Last Week {{ log.timestamp|date:"g:i A" }}
                                             {% else %}
