--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -140,11 +140,11 @@
                                         {% with log.timestamp|date:"w" as log_weekday %}
                                             {% if log_date == current_date %}
                                                 Today {{ log.timestamp|date:"g:i A" }}
-                                            {% elif log_date == current_date|date:"Y-m-d"|add:"-1 day" %}
+                                            {% elif log_date == now|date:"Y-m-d"|add:"-1 day" %}
                                                 Yesterday {{ log.timestamp|date:"g:i A" }}
-                                            {% elif log_date > current_date|date:"Y-m-d"|add:"-7 day" %}
-                                                {{ current_date|timesince:log.timestamp }} days ago {{ log.timestamp|date:"g:i A" }}
-                                            {% elif log_weekday < current_weekday and log_date > current_date|date:"Y-m-d"|add:"-7 day" %}
+                                            {% elif log.timestamp > now|date:"Y-m-d"|add:"-7 day" %}
+                                                {{ log.timestamp|timesince:now }} ago {{ log.timestamp|date:"g:i A" }}
+                                            {% elif log_weekday < current_weekday and log.timestamp > now|date:"Y-m-d"|add:"-7 day" %}
                                                 Last Week {{ log.timestamp|date:"g:i A" }}
                                             {% else %}
                                                 {{ log.timestamp|date:"Y-m-d g:i A" }}
