--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -147,8 +147,7 @@
                                             {% elif log_weekday < current_weekday and log.timestamp > now|date:"Y-m-d"|add:"-7 day" %}
                                                 Last Week {{ log.timestamp|date:"g:i A" }}
                                             {% else %}
-                                                {{ log.timestamp|timesince:now }}
-                                                {{ log.timestamp|date:"Y-m-d g:i A" }}
+                                                {{ log.timestamp|timesince:current_date }} {{ log.timestamp|date:"Y-m-d g:i A" }}
                                             {% endif %}
                                         {% endwith %}
                                     {% endwith %}
