--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -124,6 +124,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="col-md-12">
             <div class="card text-dark mb-3">
                 <div class="card-header">
                     <h4 class="card-title text-white float-left">Project Activity</h4>
