--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -124,6 +124,14 @@
                     </div>
                 </div>
             </div>
+            <div class="card text-dark mb-3">
+                <div class="card-header">
+                    <h4 class="card-title text-white float-left">Project Notes</h4>
+                </div>
+                <div class="card-body">
+                    
+                </div>
+            </div>
         </div>
         <div class="col-md-12">
             <div class="card text-dark mb-3">
