--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -159,7 +159,7 @@
                                 {% with log.model_name|get_object:log.object_id as logObject %}
                                     {{ log.model_name }}{% if log.model_name != "Project" %} "{{ logObject.name }}"{% endif %}
                                     {% if log.action_type == "updated" and log.changes|length == 1 and log.changes.status %}
-                                        was marked as <span class="badge badge-{{ log.get_status_color }}">{{ logObject.get_status_display }}</span>
+                                        was marked as <span class="badge badge-{{ log.get_status_color }}">{{ log.changes.status.new|reverse_slugify }}</span>
                                     {% elif log.action_type == "updated" %}
                                         had the value{% if log.changes.count > 1 %}s{% endif %} <span class="badge badge-secondary">{{ log.changes|dict_keys|format_list }}</span> updated
                                     {% elif log.action_type == "created" %}
