--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -15,20 +15,7 @@
             </nav>
         </div>
         <div class="col-md-7">
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" id="dashboard-tab" href="{% url 'project-detail' id=PROJECT.id %}">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tasks</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Issues</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'project-settings' id=PROJECT.id %}">Settings</a>
-              </li>
-            </ul>
+            {% include "projectpulse/project-header.html" %}
         </div>
         {% if success %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -117,14 +104,6 @@
                             <i class="fas fa-circle-exclamation fa-2x"></i>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="card text-dark mb-3">
-                <div class="card-header">
-                    <h4 class="card-title text-white float-left">Project Notes</h4>
-                </div>
-                <div class="card-body">
-                    
                 </div>
             </div>
         </div>
