--- a/templates/projectpulse/project-settings.html
+++ b/templates/projectpulse/project-settings.html
@@ -15,20 +15,7 @@
             </nav>
         </div>
         <div class="col-md-7">
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'project-detail' id=PROJECT.id %}">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tasks</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Issues</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'project-settings' id=PROJECT.id %}">Settings</a>
-              </li>
-            </ul>
+            {% include "projectpulse/project-header.html" %}
         </div>
         {% if success %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
