--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -3,36 +3,7 @@
 {% block page_content %}
 <form action="" method="post">
     {% csrf_token %}
-    <div class="row d-sm-flex align-items-center justify-content-between mb-4">
-        <div class="col-md-5">
-            <h1 class="h3 mb-0 text-dark"><i class="fas fa-diagram-project"></i> {{ PAGE_TITLE }}</h1>
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'dashboard-home' %}">Dashboard</a></li>
-                    <li class="breadcrumb-item"><a href="{% url 'projects' %}">Projects</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">{{ PROJECT.name }}</li>
-                </ol>
-            </nav>
-        </div>
-        <div class="col-md-7">
-            {% include "projectpulse/project-header.html" %}
-        </div>
-        {% if success %}
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Gem Updated!</strong><br> The gem has been successfully updated.
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% elif error %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <strong>Error!</strong><br>{{ error|safe }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% endif %}
-    </div>
+    {% include "projectpulse/project-header.html" %}
     <div class="row">
         <div class="col-md-8">
             <div class="card text-dark mb-3">
@@ -137,9 +108,9 @@
                                     {% elif log.action_type == "updated" %}
                                         had the value{% if log.changes.count > 1 %}s{% endif %} <span class="badge badge-secondary">{{ log.changes|dict_keys|format_list }}</span> updated
                                     {% elif log.action_type == "created" %}
-                                        was <span class="badge badge-success">created</span>
+                                        was <span class="badge badge-success">Created</span>
                                     {% else %}
-                                        was <span class="badge badge-danger">deleted</span>
+                                        was <span class="badge badge-danger">Deleted</span>
                                     {% endif %}
                                     {% if log.changed_by %}
                                         by {% if log.changed_by.first_name %}{{ log.changed_by.first_name }} {{ log.changed_by.last_name }}{% else %}{{ log.changed_by.username }}{% endif %}
