--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -115,7 +115,8 @@
         <div class="col-md-12">
             <div class="card text-dark mb-3">
                 <div class="card-header">
-                    <h5 class="card-title">Project Tasks</h5>
+                    <a href="{% url 'project-task-create' id=PROJECT.id %}" class="btn btn-primary float-end">New Task <i class="fas fa-plus"></i></a>
+                    <h5 class="card-title float-start">Project Tasks</h5>
                 </div>
                 <table class="table table-borderless {% if user.profile.dark_mode %}table-dark{% else %}table-light{% endif %} table-hover">
                     <thead class="thead-dark">
